--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -57,16 +57,27 @@ a {
 }
 
 /* ======== Header ========= */
-.header {
+.fix-header {
+    padding-top: 26px;
+    background: #e6f0ff;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrap {
     position: relative;
+    display: flex;
+    flex-direction: column;
     background: #e6f0ff;
     height: 100vh;
+ 
 }
 
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    padding: 12px 0px;
 }
 
 .navbar ul {
@@ -633,7 +644,7 @@ a {
     width: 28px;
     height: 28px;
     border-radius: 3px;
-    background: #F9F9F9;
+    background: #f9f9f9;
 }
 
 .footer .social-link:hover {
