--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,11 @@
     --primary-color: #0f1b4c;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -71,7 +76,6 @@ a {
     flex-direction: column;
     background: #e6f0ff;
     height: calc(100vh - 90px);
- 
 }
 
 .navbar {
